--- a/AdventOfCode17/AdventOfCode17.fsproj
+++ b/AdventOfCode17/AdventOfCode17.fsproj
@@ -55,9 +55,16 @@
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="Day4.fs" />
+    <Compile Include="Day3.fs" />
+    <Compile Include="Day2.fs" />
+    <Compile Include="Day1.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
     <Content Include="packages.config" />
+    <Content Include="Day1Input.txt" />
+    <Content Include="Day2Input.txt" />
+    <Content Include="Day4Input.txt" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
