--- a/AdventOfCode17/AdventOfCode17.fsproj
+++ b/AdventOfCode17/AdventOfCode17.fsproj
@@ -55,6 +55,8 @@
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="Day6.fs" />
+    <Compile Include="Day5.fs" />
     <Compile Include="Day4.fs" />
     <Compile Include="Day3.fs" />
     <Compile Include="Day2.fs" />
@@ -65,6 +67,7 @@
     <Content Include="Day1Input.txt" />
     <Content Include="Day2Input.txt" />
     <Content Include="Day4Input.txt" />
+    <Content Include="Day5Input.txt" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
