--- a/AdventOfCode17/AdventOfCode17.fsproj
+++ b/AdventOfCode17/AdventOfCode17.fsproj
@@ -55,6 +55,7 @@
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="Day7.fs" />
     <Compile Include="Day6.fs" />
     <Compile Include="Day5.fs" />
     <Compile Include="Day4.fs" />
