--- a/AdventOfCode17/AdventOfCode17.fsproj
+++ b/AdventOfCode17/AdventOfCode17.fsproj
@@ -55,6 +55,7 @@
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="Day11.fs" />
     <Compile Include="Day10.fs" />
     <Compile Include="Day9.fs" />
     <Compile Include="Day8.fs" />
@@ -76,6 +77,7 @@
     <Content Include="Day8Input.txt" />
     <Content Include="Day9Input.txt" />
     <Content Include="Day10Input.txt" />
+    <Content Include="Day11Input.txt" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
